--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <main>
-      <img class="parfum-image" src="./images/Bitmap.jpg" alt="parfum" />
+      <img class="parfum-image" src="./images/Bitmap.jpg" alt="Gabrielle Essence Eau De Parfum" />
 
       <div class="parfum-description">
         <p class="type">PERFUME</p>
